--- a/docker/web/web-compose.yaml
+++ b/docker/web/web-compose.yaml
@@ -1,18 +1,16 @@
 services:
   web:
     container_name: web
-    image: web:v1.3
+    image: web:v1.2
     shm_size: 512m
     build:
       context: .
-      dockerfile: dockerfile-kasm-chromium-mcp
+      dockerfile: web-dockerfile
     ipc: host
     # user: root 
     privileged: true
-    volumes:
-      - ~/Desktop/web-data/log:/app/log
-      - ~/Desktop/web-data/config:/app/config
-  
+    # volumes:
+    #   - ~/Desktop/web-data/log:/home/kasm-user/app/log
     ports:
       - "6901:6901"
       - "8002:8002"
@@ -21,4 +19,4 @@ services:
     environment:
       - VNC_PW=132632
     restart: unless-stopped
-    # command: [ "${MCP_CONFIG}/start.sh" ]
+    # command: ["${WEB_DIR}/start.sh"]
