--- a/dockerfile-kasm-chromium-mcp
+++ b/dockerfile-kasm-chromium-mcp
@@ -38,11 +38,27 @@ ENV KASM_RESTRICTED_FILE_CHOOSER=1
 COPY ./src/ubuntu/install/gtk/ $INST_SCRIPTS/gtk/
 RUN bash $INST_SCRIPTS/gtk/install_restricted_file_chooser.sh
 
+
+
+ 
+
+######### End Customizations ###########
+
+RUN chown 1000:0 $HOME
+RUN $STARTUPDIR/set_user_permission.sh $HOME
+
+ENV HOME /home/kasm-user
+WORKDIR $HOME
+RUN mkdir -p $HOME && chown -R 1000:0 $HOME
+
+
+
+
 # mcp 
 # 定义环境变量
 ENV UV_INDEX_URL=https://pypi.tuna.tsinghua.edu.cn/simple
 ENV EXTRA_INDEX_URL=https://pypi.tuna.tsinghua.edu.cn/simple
-ENV WEB_DIR=/app
+ENV WEB_DIR=$HOME/app
 ENV MCP_CONFIG=$WEB_DIR/config 
 ENV BROWER_USER_DIR=$WEB_DIR/brower-user-dir  
 ENV WEB_PYTHON_ENV=$WEB_DIR/mcp-env
@@ -66,22 +82,9 @@ RUN chmod +x ${MCP_CONFIG}/nodesource_setup.sh && \
     pip config set global.index-url $UV_INDEX_URL && \
     pip config set global.extra-index-url $EXTRA_INDEX_URL && \
     python3 -m pip install --upgrade pip && \
-    rm -rf /var/lib/apt/lists/* && rm -f ${MCP_CONFIG}/nodesource_setup.sh  && \
-    pip install uv && \
-    uv venv $WEB_PYTHON_ENV --python 3.12 && \
-    . $WEB_PYTHON_ENV/bin/activate && \
-    uv pip install playwright mcpo 
-CMD [ "${MCP_CONFIG}/start.sh" ]
-
- 
-
-######### End Customizations ###########
-
-RUN chown 1000:0 $HOME
-RUN $STARTUPDIR/set_user_permission.sh $HOME
-
-ENV HOME /home/kasm-user
-WORKDIR $HOME
-RUN mkdir -p $HOME && chown -R 1000:0 $HOME
-
+    rm -rf /var/lib/apt/lists/* && rm -f ${MCP_CONFIG}/nodesource_setup.sh  
+#     pip install uv && \
+#     uv venv $WEB_PYTHON_ENV --python 3.12 && \
+#     . $WEB_PYTHON_ENV/bin/activate && \
+#     uv pip install playwright mcpo 
 USER 1000
