--- a/dockerfile-kasm-desktop-diy
+++ b/dockerfile-kasm-desktop-diy
@@ -12,55 +12,49 @@ WORKDIR $HOME
 
 
 # Install Google Chrome
-COPY ./src/ubuntu/install/chrome $INST_SCRIPTS/chrome/
-RUN bash $INST_SCRIPTS/chrome/install_chrome.sh  && rm -rf $INST_SCRIPTS/chrome/
+# COPY ./src/ubuntu/install/chrome $INST_SCRIPTS/chrome/
+# RUN bash $INST_SCRIPTS/chrome/install_chrome.sh  && rm -rf $INST_SCRIPTS/chrome/
 
-# Install Firefox
-COPY ./src/ubuntu/install/firefox/ $INST_SCRIPTS/firefox/
-COPY ./src/ubuntu/install/firefox/firefox.desktop $HOME/Desktop/
-RUN bash $INST_SCRIPTS/firefox/install_firefox.sh && rm -rf $INST_SCRIPTS/firefox/
-
-# Install Custom Certificate Authority
-# COPY ./src/ubuntu/install/certificates $INST_SCRIPTS/certificates/
-# RUN bash $INST_SCRIPTS/certificates/install_ca_cert.sh && rm -rf $INST_SCRIPTS/certificates/
+# Install Chromium
+COPY ./src/ubuntu/install/chromium $INST_SCRIPTS/chromium/
+RUN bash $INST_SCRIPTS/chromium/install_chromium.sh && rm -rf $INST_SCRIPTS/chromium/
 
 # mcp 
 # 定义环境变量
-# ENV UV_INDEX_URL=https://pypi.tuna.tsinghua.edu.cn/simple
-# ENV EXTRA_INDEX_URL=https://pypi.tuna.tsinghua.edu.cn/simple
-# ENV UV_DEFAULT_INDEX=https://pypi.tuna.tsinghua.edu.cn/simple
-# ENV UV_PYTHON_INSTALL_MIRROR=https://mirror.nju.edu.cn/github-release/indygreg/python-build-standalone/
-# ENV WEB_DIR=/app
-# ENV MCP_CONFIG=$WEB_DIR/config 
-# ENV BROWER_USER_DIR=$WEB_DIR/brower-user-dir  
-# ENV WEB_PYTHON_ENV=$WEB_DIR/mcp-env
-# ENV WEB_LOG=$WEB_DIR/log
+ENV UV_INDEX_URL=https://pypi.tuna.tsinghua.edu.cn/simple
+ENV EXTRA_INDEX_URL=https://pypi.tuna.tsinghua.edu.cn/simple
+ENV UV_DEFAULT_INDEX=https://pypi.tuna.tsinghua.edu.cn/simple
+ENV UV_PYTHON_INSTALL_MIRROR=https://mirror.nju.edu.cn/github-release/indygreg/python-build-standalone/
+ENV WEB_DIR=/app
+ENV MCP_CONFIG=$WEB_DIR/config 
+ENV BROWER_USER_DIR=$WEB_DIR/brower-user-dir  
+ENV WEB_PYTHON_ENV=$WEB_DIR/mcp-env
+ENV WEB_LOG=$WEB_DIR/log
 
 
-# RUN mkdir -p ${BROWER_USER_DIR} && \
-#     mkdir -p $WEB_LOG && \
-#     mkdir -p $MCP_CONFIG 
+RUN mkdir -p ${BROWER_USER_DIR} && \
+    mkdir -p $WEB_LOG && \
+    mkdir -p $MCP_CONFIG 
 
-# COPY ./mcp/start.sh        ${MCP_CONFIG}/
-# COPY ./mcp/config.json     ${MCP_CONFIG}/
-# COPY ./mcp/setup_20.x      ${MCP_CONFIG}/nodesource_setup.sh   
+COPY ./mcp/start.sh        ${STARTUPDIR}/custom_startup.sh
+COPY ./mcp/config.json     ${MCP_CONFIG}/
+COPY ./mcp/setup_20.x      ${MCP_CONFIG}/nodesource_setup.sh   
 
 # 安装nodejs和pip
 # 
-# RUN chmod +x ${MCP_CONFIG}/nodesource_setup.sh && \
-#     chmod +x ${MCP_CONFIG}/start.sh && \
-#     bash ${MCP_CONFIG}/nodesource_setup.sh && apt-get update && \
-#     apt-get install -y --no-install-recommends nodejs python3-pip && \
-#     pip config set global.index-url $UV_INDEX_URL && \
-#     pip config set global.extra-index-url $EXTRA_INDEX_URL && \
-#     python3 -m pip install --upgrade pip && \
-#     rm -rf /var/lib/apt/lists/* && rm -f ${MCP_CONFIG}/nodesource_setup.sh
-# RUN pip install uv  && \
-# uv venv $WEB_PYTHON_ENV --python 3.12  && \
-# . $WEB_PYTHON_ENV/bin/activate && \
-# uv pip install playwright mcpo 
-# RUN chown 1000:0 $WEB_DIR
-# RUN $STARTUPDIR/set_user_permission.sh $WEB_DIR
+RUN chmod +x ${MCP_CONFIG}/nodesource_setup.sh && \
+    chmod +x ${STARTUPDIR}/custom_startup.sh && \
+    bash ${MCP_CONFIG}/nodesource_setup.sh && apt-get update && \
+    apt-get install -y --no-install-recommends nodejs && \
+    rm -rf /var/lib/apt/lists/* && rm -f ${MCP_CONFIG}/nodesource_setup.sh
+RUN curl -LsSf https://astral.sh/uv/install.sh | sh  && \
+. $HOME/.local/bin/env && \
+uv venv $WEB_PYTHON_ENV --python 3.12  && \
+. $WEB_PYTHON_ENV/bin/activate && \
+uv pip install playwright mcpo 
+RUN chown 1000:0 $WEB_DIR
+RUN $STARTUPDIR/set_user_permission.sh $WEB_DIR
+
 ######### End Customizations ###########
 
 RUN chown 1000:0 $HOME
@@ -71,5 +65,5 @@ WORKDIR $HOME
 RUN mkdir -p $HOME && chown -R 1000:0 $HOME
 
 USER 1000
-# CMD [ "${MCP_CONFIG}/start.sh" ]
+# CMD [ "${WEB_DIR}/start.sh" ]
 # CMD ["--tail-log"]
