deleted:    dockerfile-kasm-chromium-mcp 	modified:   dockerfile-kasm-desktop-diy 	renamed:    docker/mcps/docker-compose.yaml -> mcp-server-compose.yaml 	renamed:    docker/mcps/mcp-servers-dockerfile -> mcp-servers-dockerfile 	renamed:    docker/.DS_Store -> mcpos/.DS_Store 	renamed:    docker/.gitignore -> mcpos/.gitignore 	renamed:    docker/auto.py -> mcpos/auto.py 	renamed:    docker/clear_image.sh -> mcpos/clear_image.sh 	renamed:    docker/mcps/config.json -> mcpos/config.json 	renamed:    docker/mcps/start.sh -> mcpos/start.sh 	renamed:    mcp/arm-sources.list -> pkgs/arm-sources.list 	renamed:    mcp/setup_20.x -> pkgs/nodesource_setup.sh 	renamed:    mcp/sources.list -> pkgs/sources.list 	modified:   web-compose.yaml

--- a/dockerfile-kasm-desktop-diy
+++ b/dockerfile-kasm-desktop-diy
@@ -10,10 +10,10 @@ WORKDIR $HOME
 
 ######### Customize Container Here ###########
 
-
-# Install Google Chrome
-# COPY ./src/ubuntu/install/chrome $INST_SCRIPTS/chrome/
-# RUN bash $INST_SCRIPTS/chrome/install_chrome.sh  && rm -rf $INST_SCRIPTS/chrome/
+# arm
+# COPY ./pkgs/arm-sources.list /etc/apt/sources.list
+# amd64
+COPY ./pkgs/sources.list /etc/apt/sources.list
 
 # Install Chromium
 COPY ./src/ubuntu/install/chromium $INST_SCRIPTS/chromium/
@@ -38,7 +38,7 @@ RUN mkdir -p ${BROWER_USER_DIR} && \
 
 COPY ./mcp/start.sh        ${STARTUPDIR}/custom_startup.sh
 COPY ./mcp/config.json     ${MCP_CONFIG}/
-COPY ./mcp/setup_20.x      ${MCP_CONFIG}/nodesource_setup.sh   
+COPY ./pkgs/nodesource_setup.sh      ${MCP_CONFIG}/nodesource_setup.sh   
 
 # 安装nodejs和pip
 # 
